# WebSocketKafkaStreamer

./: .env.example  .gitignore  .replit  Dockerfile  LICENSE  README.md  app.py  config.py  dashboard.py  data_processor.py  database_dashboard.py  enhanced_dashboard.py  generic_dashboard.py  github_requirements.txt  main.py  pyproject.toml  requirements_for_github.txt  run_dashboard.py  run_websocket.py  simple_dashboard.py  websocket_server.py
Screenshots/: README.md
attached_assets/: cat_kafka_websocket_server.py.docx  python-dash_cat-dash-poc_cat_dash_websocket_client.py.docx
config/: config.yaml
sample_data/: sample_data.json  sample_kpi_config.json
static/css/: style.css
static/js/: websocket.js
templates/: index.html  upload.html
